# mumble-macos

./: .backportrc.json  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/actions/install-dependencies/: action.yml  common.sh  main.sh
.github/workflows/: build.sh  build.yml  check_commit_style.py  pr-checks.yml  xcodebuild-test.yml
3rdPartyLicenses/: qt_license.txt
auxiliary_files/: CMakeLists.txt
auxiliary_files/man_files/: mumble-overlay.1  mumble.1
cmake/: compiler.cmake  install-library.cmake  install-paths.cmake  os.cmake
docs/dev/: TheMumbleSourceCode.md  migration-qt-to-native.md
docs/dev/build-instructions/: README.md  build_macos.md  cmake_options.md  common_build_errors.md  faq.md
macos/MumbleUI/: .gitignore
macos/MumbleUI/MumbleUI/: Local.xcconfig.example  MumbleUI.swift
macos/MumbleUI/MumbleUI.xcodeproj/: project.pbxproj
macos/MumbleUI/MumbleUI/Bridge/: MUMBridgeHost.mm
macos/MumbleUI/MumbleUI/Public/: MUMBridgeHost.h  MUMHelloApp.h  MUMNativeShell.h  MumbleUI.h
macos/MumbleUI/MumbleUI/Resources/: Localizable.xcstrings
macos/MumbleUI/MumbleUI/Resources/Assets.xcassets/BrandTint.colorset/: Contents.json
macos/MumbleUI/MumbleUI/Swift/: AppDelegate.swift  BridgeModels.swift  HelloApp.swift  HelloView.swift  MainMenuBuilder.swift  MainWindowController.swift  ShellEntry.swift
macx/scripts/: gendmg.pl  osxdist.py
mumble-macos/: mumble-macos-Bridging-Header.h
mumble-macos.xcodeproj/: project.pbxproj
mumble-macos.xcodeproj/xcshareddata/xcschemes/: mumble-macos.xcscheme
mumble-macos/Resources/: Credits.html  Credits.rtf  Info.plist  mumble-macos.entitlements
mumble-macos/Sources/App/: AppDelegate.swift  CertificateManagerWindowController.swift  MainMenu.swift  MainWindowController.swift  PreferencesWindowController.swift  ServersWindowController.swift  ShortcutDispatcher.swift
mumble-macos/Sources/Audio/: CaptureCutoff.swift  OpusCodec.swift  VoiceController.swift
mumble-macos/Sources/Identity/: DEREncoder.swift  IdentityStore.swift  PKCS12Encoder.swift  ServerPasswordStore.swift  X509Builder.swift
mumble-macos/Sources/Model/: DragPayloads.swift  MumbleAppImportCoordinator.swift  MumbleAppImporter.swift  MumbleURL.swift  PublicServerRefresh.swift  QuickConnectMemory.swift  SavedServer.swift  ServerBookStore.swift  ServerConnectionParameters.swift  ServerModel.swift
mumble-macos/Sources/Model/Settings/: AudioSettingsStore.swift  GeneralSettingsStore.swift  LastConnectedServerStore.swift  ShortcutBinding.swift  ShortcutsStore.swift
mumble-macos/Sources/Network/: MumbleClient.swift  MumbleTransport.swift  PublicServerList.swift  SelfMuteDeafState.swift
mumble-macos/Sources/Protocol/: MumbleAudio.swift  MumbleFraming.swift  MumbleMessages.swift  Protobuf.swift  VoiceTargetMessage.swift
mumble-macos/Sources/Views/: BookmarkEditorView.swift  CertificateManagerView.swift  ConnectView.swift  MainView.swift  PasswordPromptView.swift  ServersView.swift  WelcomeText.swift
mumble-macos/Sources/Views/Preferences/: AudioTab.swift  GeneralTab.swift  ShortcutsTab.swift  WhisperTargetSheet.swift
mumble-macosTests/: AudioSettingsStoreTests.swift  CaptureCutoffTests.swift  GeneralSettingsStoreTests.swift  MumbleAppImportCoordinatorTests.swift  MumbleAppImporterTests.swift  MumbleClientChannelResolutionTests.swift  MumbleURLTests.swift  OpusCodecRoundtripTests.swift  PKCS12EncoderTests.swift  PasswordHandlingTests.swift  PublicServerListTests.swift  SelfMuteDeafStateTests.swift  ServerBookStoreTests.swift  ServerPasswordStoreTests.swift  ShortcutBindingTests.swift  ShortcutsStoreTests.swift  VoiceTargetMessageTests.swift  WelcomeHTMLTests.swift  WhisperTargetTreeFlattenTests.swift
plugins/: CMakeLists.txt
scripts/: generate_license_header.py
src/: CMakeLists.txt  Connection.cpp  Connection.h  EnvUtils.cpp  EnvUtils.h  HostAddress.cpp  Logger.cpp  OSInfo.cpp  ProcessResolver.cpp  QtUtils.cpp  SSL.cpp  SelfSignedCertificate.cpp  SelfSignedCertificate.h  Utils.h
src/crypto/: CryptStateOCB2.cpp  CryptographicRandom.cpp
src/mumble/: About.cpp  AppNap.mm  AudioConfigDialog.cpp  AudioInput.cpp  AudioOutput.cpp  AudioOutputSample.cpp  AudioOutputSpeech.cpp  AudioStats.cpp  AudioWizard.cpp  AudioWizard.ui  CMakeLists.txt  Cert.cpp  ClientUser.cpp  ClientUser.h  ConfigDialog.cpp  ConnectDialog.cpp  CrashReporter.cpp  CustomElements.cpp  Database.cpp  EnumStringConversions.cpp  EnumStringConversions.h  Global.cpp  Global.h  GlobalShortcut.cpp  GlobalShortcut.ui  GlobalShortcut_macx.mm  JSONSerialization.cpp  JSONSerialization.h  LCD.cpp  Log.cpp  LookConfig.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Messages.cpp  MumbleApplication.cpp  MumbleApplication.h  NetworkConfig.cpp  NetworkConfig.h  NetworkConfig.ui  (+72 more)
src/mumble/widgets/: TrayIcon.cpp
src/tests/: CMakeLists.txt
src/tests/TestCrypt/: CMakeLists.txt  TestCrypt.cpp
src/tests/TestDatabase/: README.md  TestUtils.cpp
src/tests/TestMumbleProtocol/: TestMumbleProtocol.cpp
src/tests/TestSelfSignedCertificate/: TestSelfSignedCertificate.cpp
src/tests/TestServerResolver/: TestServerResolver.cpp
src/tests/TestSettingsJSONSerialization/: generate_test_case.py
themes/: DefaultTheme.qrc
themes/Default/: theme.ini
